--- a/ProjectCDTT_63132701/Content/login.css
+++ b/ProjectCDTT_63132701/Content/login.css
@@ -151,3 +151,25 @@
     color: #f00;
     text-decoration: underline;
 }
+.password-container {
+    position: relative;
+    width: 100%;
+}
+
+    .password-container input {
+        width: 100%;
+        padding-right: 40px; /* Chừa chỗ cho icon */
+    }
+
+    .password-container .toggle-password {
+        position: absolute;
+        top: 50%;
+        right: 10px;
+        transform: translateY(-50%);
+        background: none;
+        border: none;
+        cursor: pointer;
+        padding: 0;
+        font-size: 16px;
+        color: #999;
+    }
