--- a/ProjectCDTT_63132701/Views/san_pham/ChiTietHoaDon.cshtml
+++ b/ProjectCDTT_63132701/Views/san_pham/ChiTietHoaDon.cshtml
@@ -6,11 +6,16 @@
 }
 
 <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link rel="stylesheet" href="~/Content/donhang.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <div class="container py-4">
-    <h2 class="mb-4">Hóa đơn #@Model.MaDH</h2>
+    <a href="javascript:history.back()" class="back-button">
+        <i class="fa-solid fa-chevron-left"></i> Quay lại
+    </a>
+    <h2 class="invoice-title mb-4">Hóa đơn #@Model.MaDH</h2>
 
     <div class="row mb-4">
         <div class="col-md-6">
