--- a/ProjectCDTT_63132701/Views/tai_khoan/Login.cshtml
+++ b/ProjectCDTT_63132701/Views/tai_khoan/Login.cshtml
@@ -5,6 +5,8 @@
 }
 <head>
     <link rel="stylesheet" href="~/Content/login.css" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+
 </head>
 
 <div class="login-wrapper">
@@ -14,30 +16,55 @@
                 <img src="~/images/mau29.jpg" alt="trang sức cao cấp" class="img-fluid" />
             </div>
         </div>
-<div class="login-right">
-    <div class="login-form-wrapper">
-        <h5>ĐĂNG NHẬP</h5>
-        @using (Html.BeginForm("Login", "Tai_khoan", FormMethod.Post))
-        {
-            @Html.AntiForgeryToken()
+        <div class="login-right">
+            <div class="login-form-wrapper">
+                <h5>ĐĂNG NHẬP</h5>
+                @using (Html.BeginForm("Login", "Tai_khoan", FormMethod.Post))
+                {
+                    @Html.AntiForgeryToken()
 
-            <div class="form-group">
-                <label for="email">Email</label>
-                <input type="email" name="email" class="form-control" id="email" placeholder="Nhập email" required />
+                    <div class="form-group">
+                        <label for="email">Email</label>
+                        <input type="email" name="email" class="form-control" id="email" placeholder="Nhập email" required />
+                    </div>
+
+                    <div class="form-group">
+                        <label for="password">Mật khẩu</label>
+                        <div class="password-container">
+                            <input type="password" name="password" class="form-control" id="password" placeholder="Nhập mật khẩu" required />
+                            <button type="button" class="toggle-password" onclick="togglePasswordVisibility()">
+                                <i id="eye-icon" class="fa fa-eye"></i>
+                            </button>
+
+                        </div>
+                    </div>
+
+
+
+                    <div class="button-container">
+                        <button type="submit" class="btn btn-login">ĐĂNG NHẬP</button>
+                    </div>
+                }
+                <p><a href="@Url.Action("ForgotPassword", "tai_khoan")">Quên mật khẩu?</a></p>
+                <p>Chưa có tài khoản? <a href="/Tai_khoan/Register">Đăng ký</a></p>
             </div>
+        </div>
+    </div>
+</div>
+<script>
+    function togglePasswordVisibility() {
+        const passwordField = document.getElementById("password");
+        const eyeIcon = document.getElementById("eye-icon");
 
-            <div class="form-group">
-                <label for="password">Mật khẩu</label>
-                <input type="password" name="password" class="form-control" id="password" placeholder="Nhập mật khẩu" required />
-            </div>
-
-
-            <div class="button-container">
-                <button type="submit" class="btn btn-login">ĐĂNG NHẬP</button>
-            </div>
+        // Kiểm tra xem mật khẩu đang hiển thị hay không
+        if (passwordField.type === "password") {
+            passwordField.type = "text";
+            eyeIcon.classList.remove("fa-eye");
+            eyeIcon.classList.add("fa-eye-slash");  // Đổi sang mắt có dấu gạch chéo
+        } else {
+            passwordField.type = "password";
+            eyeIcon.classList.remove("fa-eye-slash");
+            eyeIcon.classList.add("fa-eye");  // Đổi lại thành mắt bình thường
         }
-        <p>Chưa có tài khoản? <a href="/Tai_khoan/Register">Đăng ký</a></p>
-    </div>
-</div>
-    </div>
-</div>
+    }
+</script>
