--- a/ProjectCDTT_63132701/Views/khach_hang/QLKH.cshtml
+++ b/ProjectCDTT_63132701/Views/khach_hang/QLKH.cshtml
@@ -7,6 +7,10 @@
 <head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="~/Content/qlsp.css" />
+    <link rel="stylesheet" href="~/Content/pagination.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/simplePagination.js/1.6/jquery.simplePagination.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simplePagination.js/1.6/simplePagination.min.css" />
 </head>
 
 <h2>Danh sách khách hàng</h2>
@@ -14,7 +18,7 @@
     @Html.ActionLink("Thêm khách hàng", "Create", null, new { @class = "btn-submit" })
 </p>
 
-<table class="table table-bordered">
+<table class="table table-bordered" id="tableQLKH">
     <thead>
         <tr>
             <th>Họ và tên</th>
@@ -58,3 +62,26 @@
         }
     </tbody>
 </table>
+<div id="pagination" class="mt-3"></div>
+<script>
+    $(document).ready(function () {
+        var itemsPerPage = 10;
+        var items = $("#tableQLKH tbody tr");
+        var numItems = items.length;
+
+        $('#pagination').pagination({
+            items: numItems,
+            itemsOnPage: itemsPerPage,
+            cssStyle: 'light-theme',
+            prevText: '←',
+            nextText: '→',
+            onPageClick: function (pageNumber) {
+                var showFrom = itemsPerPage * (pageNumber - 1);
+                var showTo = showFrom + itemsPerPage;
+                items.hide().slice(showFrom, showTo).show();
+            }
+        });
+
+        items.hide().slice(0, itemsPerPage).show();
+    });
+</script>
