--- a/ProjectCDTT_63132701/Views/san_pham/QLSP.cshtml
+++ b/ProjectCDTT_63132701/Views/san_pham/QLSP.cshtml
@@ -7,6 +7,11 @@
 <head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="~/Content/qlsp.css" />
+    <link rel="stylesheet" href="~/Content/pagination.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/simplePagination.js/1.6/jquery.simplePagination.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simplePagination.js/1.6/simplePagination.min.css" />
+
 </head>
 
 
@@ -16,7 +21,7 @@
 </div>
 
 
-<table class="table table-bordered">
+<table class="table table-bordered" id="tableQLSP">
     <thead>
         <tr>
             <th>Mã sản phẩm</th>
@@ -38,7 +43,7 @@
                 <td>@Html.DisplayFor(modelItem => item.MoTa)</td>
                 <td>@Html.DisplayFor(modelItem => item.DonGia)</td>
                 <td>@Html.DisplayFor(modelItem => item.LoaiBac)</td>
-              
+
                 <td>
                     <a href="@Url.Action("Details", new { id = item.MaSP })" class="btn btn-info btn-sm">
                         <i class="fas fa-eye"></i>
@@ -54,3 +59,26 @@
         }
     </tbody>
 </table>
+<div id="pagination" class="mt-3"></div>
+<script>
+    $(document).ready(function () {
+        var itemsPerPage = 10;
+        var items = $("#tableQLSP tbody tr");
+        var numItems = items.length;
+
+        $('#pagination').pagination({
+            items: numItems,
+            itemsOnPage: itemsPerPage,
+            cssStyle: 'light-theme',
+            prevText: '←',
+            nextText: '→',
+            onPageClick: function (pageNumber) {
+                var showFrom = itemsPerPage * (pageNumber - 1);
+                var showTo = showFrom + itemsPerPage;
+                items.hide().slice(showFrom, showTo).show();
+            }
+        });
+
+        items.hide().slice(0, itemsPerPage).show();
+    });
+</script>
