--- a/ProjectCDTT_63132701/Views/tai_khoan/ResetPassword.cshtml
+++ b/ProjectCDTT_63132701/Views/tai_khoan/ResetPassword.cshtml
@@ -20,7 +20,7 @@
             <div class="login-form-wrapper">
                 <h5>ĐẶT LẠI MẬT KHẨU</h5>
 
-                @using (Html.BeginForm("SuccessPassword", "tai_khoan", FormMethod.Post))
+                @using (Html.BeginForm("ResetPassword", "tai_khoan", FormMethod.Post))
                 {
                     @Html.AntiForgeryToken()
                     @Html.Hidden("email", (string)ViewBag.Email)
@@ -32,7 +32,7 @@
                             <input type="password" name="matKhauMoi" id="matKhauMoi" class="form-control" required />
                             <button type="button" class="toggle-password" onclick="togglePasswordVisibility('matKhauMoi', this)">
                                 <i class="fa-solid fa-eye"></i>
-                            </button>                        
+                            </button>
                         </div>
                     </div>
 
@@ -42,7 +42,7 @@
                             <input type="password" name="xacNhanMatKhau" id="xacNhanMatKhau" class="form-control" required />
                             <button type="button" class="toggle-password" onclick="togglePasswordVisibility('xacNhanMatKhau', this)">
                                 <i class="fa-solid fa-eye"></i>
-                            </button>                        
+                            </button>
                         </div>
 
                     </div>
