--- a/ProjectCDTT_63132701/Views/tai_khoan/Register.cshtml
+++ b/ProjectCDTT_63132701/Views/tai_khoan/Register.cshtml
@@ -52,8 +52,9 @@
 
                             <div class="form-group">
                                 <label for="diaChi">Địa chỉ</label>
-                                <textarea name="diaChi" class="form-control" id="diaChi" placeholder="Nhập địa chỉ" style="height: 130px;"></textarea>
+                                <textarea name="diaChi" class="form-control" id="diaChi" placeholder="Nhập địa chỉ" style="height: 130px; resize: none;"></textarea>
                             </div>
+
 
                         </div>
                     </div>
