add model confirm

--- a/ProjectCDTT_63132701/Views/Don_hang/QLDH.cshtml
+++ b/ProjectCDTT_63132701/Views/Don_hang/QLDH.cshtml
@@ -17,7 +17,7 @@
 
 @if (TempData["SuccessMessage"] != null)
 {
-    <div class="alert alert-success">
+    <div class="alert alert-success" id="successMessage">
         @TempData["SuccessMessage"]
     </div>
 }
