them success message

--- a/ProjectCDTT_63132701/Views/san_pham/ThuongHieu.cshtml
+++ b/ProjectCDTT_63132701/Views/san_pham/ThuongHieu.cshtml
@@ -183,10 +183,13 @@
                     <div class="image-container">
                         <img src="~/Images/mau28.jpg" alt="Dây chuyền bạc khác" class="img-fluid rounded shadow">
                         <div class="overlay">
-                            <div class="text">Mỗi ngày là một cơ hội mới để thay đổi, làm mới bản thân và bắt đầu hành trình khác.</div>
+                            <div class="text">
+                                Mỗi ngày là một cơ hội mới để thay đổi, làm mới bản thân và bắt đầu hành trình khác.
+                            </div>
                         </div>
                     </div>
                 </div>
+
             </div>
         </div>
     </section>
