--- a/ProjectCDTT_63132701/Views/shared/_LayoutUser.cshtml
+++ b/ProjectCDTT_63132701/Views/shared/_LayoutUser.cshtml
@@ -121,7 +121,7 @@
                     <li>@Html.ActionLink("Loại bạc", "LoaiBac", "san_pham", new { }, new { @class = "dropdown-item" })</li>
 
                 </ul>
-                </li>
+            </li>
             <li class="nav-item">
                 @Html.ActionLink("Khuyến mãi", "../san_pham/KhuyenMai", new { @class = "nav-link" })
             </li>
@@ -251,3 +251,4 @@
 
 </body>
 </html>
+@RenderSection("Scripts", required: false)
