--- a/ProjectCDTT_63132701/Views/khach_hang/EditProfile.cshtml
+++ b/ProjectCDTT_63132701/Views/khach_hang/EditProfile.cshtml
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
 </head>
 
 <div class="login-wrapper">
@@ -24,7 +26,6 @@
         <div class="login-right">
             <div class="login-form-wrapper">
                 <h5>Cập nhật thông tin của khách hàng: @Model.HoTen</h5>
-
                 @using (Html.BeginForm())
                 {
                     @Html.AntiForgeryToken()
@@ -34,14 +35,13 @@
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label for="HoTen">Họ và Tên</label>
-                                @Html.TextBoxFor(model => model.HoTen, new { @class = "form-control" })
+                                @Html.TextBoxFor(model => model.HoTen, new { @class = "form-control", @readonly = "readonly", id = "HoTen" })
                                 @Html.ValidationMessageFor(model => model.HoTen, "", new { @class = "text-danger" })
                             </div>
 
-                            <!-- Không cho phép chỉnh sửa Email -->
                             <div class="form-group">
                                 <label for="Email">Email</label>
-                                @Html.TextBoxFor(model => model.Email, new { @class = "form-control", @readonly = "readonly" })
+                                @Html.TextBoxFor(model => model.Email, new { @class = "form-control", @readonly = "readonly", id = "Email" })
                                 @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
                             </div>
                         </div>
@@ -50,23 +50,50 @@
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label for="SoDienThoai">Số Điện Thoại</label>
-                                @Html.TextBoxFor(model => model.SoDienThoai, new { @class = "form-control" })
+                                @Html.TextBoxFor(model => model.SoDienThoai, new { @class = "form-control", @readonly = "readonly", id = "SoDienThoai" })
                                 @Html.ValidationMessageFor(model => model.SoDienThoai, "", new { @class = "text-danger" })
                             </div>
 
                             <div class="form-group">
                                 <label for="DiaChi">Địa Chỉ</label>
-                                @Html.TextBoxFor(model => model.DiaChi, new { @class = "form-control" })
+                                @Html.TextBoxFor(model => model.DiaChi, new { @class = "form-control", @readonly = "readonly", id = "DiaChi" })
                                 @Html.ValidationMessageFor(model => model.DiaChi, "", new { @class = "text-danger" })
                             </div>
                         </div>
                     </div>
 
-                    <div class="button-container">
-                        <button type="submit" class="btn btn-login">Cập nhật</button>
+                    <div class="button-container mt-3">
+                        <button type="button" id="btnEdit" class="btn btn-login ">Chỉnh sửa</button>
+                        <button type="submit" id="btnSave" class="btn btn-login d-none">Lưu</button>
                     </div>
                 }
             </div>
         </div>
     </div>
 </div>
+<script>
+    $(document).ready(function () {
+        $('#btnEdit').on('click', function () {
+            $('#HoTen, #SoDienThoai, #DiaChi').prop('readonly', false);
+            $('#btnEdit').addClass('d-none');
+            $('#btnSave').removeClass('d-none');
+        });
+    });
+
+</script>
+@section Scripts {
+    <script>
+        $(document).ready(function () {
+            var message = '@TempData["Message"]';
+            if (message) {
+                toastr.options = {
+                    "closeButton": true,
+                    "progressBar": true,
+                    "positionClass": "toast-top-right",
+                    "timeOut": "4000"
+                };
+                toastr.success(message);
+            }
+        });
+    </script>
+}
