--- a/ProjectCDTT_63132701/Views/san_pham/GioHang.cshtml
+++ b/ProjectCDTT_63132701/Views/san_pham/GioHang.cshtml
@@ -11,14 +11,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="~/Content/giohang.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
 </head>
 
-@if (TempData["Message"] != null)
-{
-    <div class="alert alert-success" id="Message">
-        @TempData["Message"]
-    </div>
-}
 <div class="container">
     <a href="javascript:history.back()" class="back-button">
         <i class="fa-solid fa-chevron-left"></i> Quay lại
@@ -258,15 +254,21 @@
         $('#confirmOrderModal').modal('hide');
         $('form').submit();
     });
-
-    setTimeout(function () {
-        var message = document.getElementById("Message");
-        if (message) {
-            message.style.transition = "opacity 0.5s ease";
-            message.style.opacity = 0;
-            setTimeout(function () {
-                message.remove();
-            }, 500);
-        }
-    }, 3000);
 </script>
+
+@section Scripts {
+    <script>
+        $(document).ready(function () {
+            var message = '@TempData["Message"]';
+            if (message) {
+                toastr.options = {
+                    "closeButton": true,
+                    "progressBar": true,
+                    "positionClass": "toast-top-right",
+                    "timeOut": "4000"
+                };
+                toastr.success(message);
+            }
+        });
+    </script>
+}
