--- a/ProjectCDTT_63132701/Views/tai_khoan/Login.cshtml
+++ b/ProjectCDTT_63132701/Views/tai_khoan/Login.cshtml
@@ -49,7 +49,7 @@
                 }
                 @if (ViewBag.Message != null)
                 {
-                    <div style="color: green; margin-bottom: 15px;">@ViewBag.Message</div>
+                    <div style="color: red; margin-bottom: 15px;">@ViewBag.Message</div>
                 }
 
                 <p><a href="@Url.Action("ForgotPassword", "tai_khoan")">Quên mật khẩu</a></p>
