--- a/ProjectCDTT_63132701/Views/san_pham/ChiTietSanPham.cshtml
+++ b/ProjectCDTT_63132701/Views/san_pham/ChiTietSanPham.cshtml
@@ -13,7 +13,9 @@
 </head>
 
 <div class="product-detail">
-
+    <a href="javascript:history.back()" class="back-button">
+        <i class="fa-solid fa-chevron-left"></i> Quay lại
+    </a>
     <div class="product-image">
         <img src="@Url.Content("~/Images/" + Model.AnhSanPham)" alt="@Model.TenSP">
     </div>
