--- a/ProjectCDTT_63132701/Views/san_pham/YeuThich.cshtml
+++ b/ProjectCDTT_63132701/Views/san_pham/YeuThich.cshtml
@@ -35,7 +35,7 @@
 
                             <form action="@Url.Action("AddToCart", "San_pham")" method="post" class="add-to-cart-form">
                                 <input type="hidden" name="MaSP" value="@item.SanPham.MaSP" />
-                                <input type="hidden" name="SoLuong" value="1" /> <!-- Cần dòng này -->
+                                <input type="hidden" name="SoLuong" value="1" /> 
                                 <button type="submit" class="btn btn-add-to-cart">
                                     <i class="fa fa-shopping-bag"></i>
                                     <span>Thêm vào giỏ</span>
