--- a/ProjectCDTT_63132701/Views/shared/_LayoutUser.cshtml
+++ b/ProjectCDTT_63132701/Views/shared/_LayoutUser.cshtml
@@ -65,6 +65,9 @@
                                 <a href="@Url.Action("Login", "Tai_khoan")" class="dropdown-item">
                                     <i class="fas fa-sign-in-alt"></i> Đăng nhập
                                 </a>
+                                <a href="@Url.Action("Register", "Tai_khoan")" class="dropdown-item">
+                                    <i class="fa fa-user-plus" aria-hidden="true"></i> Đăng ký
+                                </a>
                             </li>
                         }
                         else
