--- a/ProjectCDTT_63132701/Views/san_pham/GioHang.cshtml
+++ b/ProjectCDTT_63132701/Views/san_pham/GioHang.cshtml
@@ -263,7 +263,7 @@
                 toastr.options = {
                     "closeButton": true,
                     "progressBar": true,
-                    "positionClass": "toast-top-right",
+                    "positionClass": "toast-bottom-right",
                     "timeOut": "4000"
                 };
                 toastr.success(message);
