--- a/ProjectCDTT_63132701/Views/san_pham/Index.cshtml
+++ b/ProjectCDTT_63132701/Views/san_pham/Index.cshtml
@@ -12,6 +12,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playwrite+AU+SA:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="~/Content/Home.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
 </head>
 
 <div id="bannerCarousel" class="carousel slide" data-bs-ride="carousel">
