--- a/ProjectCDTT_63132701/Views/tai_khoan/Login.cshtml
+++ b/ProjectCDTT_63132701/Views/tai_khoan/Login.cshtml
@@ -6,6 +6,10 @@
 <head>
     <link rel="stylesheet" href="~/Content/login.css" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
 
 </head>
 
@@ -58,21 +62,43 @@
         </div>
     </div>
 </div>
-
-<script>
+@section Scripts {
+    <script>
     function togglePasswordVisibility() {
         const passwordField = document.getElementById("password");
         const eyeIcon = document.getElementById("eye-icon");
 
-        // Kiểm tra xem mật khẩu đang hiển thị hay không
         if (passwordField.type === "password") {
             passwordField.type = "text";
             eyeIcon.classList.remove("fa-eye");
-            eyeIcon.classList.add("fa-eye-slash");  // Đổi sang mắt có dấu gạch chéo
+            eyeIcon.classList.add("fa-eye-slash");
         } else {
             passwordField.type = "password";
             eyeIcon.classList.remove("fa-eye-slash");
-            eyeIcon.classList.add("fa-eye");  // Đổi lại thành mắt bình thường
+            eyeIcon.classList.add("fa-eye");
         }
     }
-</script>
+     $(document).ready(function () {
+        @if (TempData["Message"] != null)
+        {
+            <text>
+                toastr.options = {
+                    "closeButton": true,
+                    "progressBar": true,
+                    "positionClass": "toast-bottom-right",
+                    "timeOut": 1000
+                };
+                toastr.success('Đăng nhập thành công! Đang chuyển hướng...');
+                setTimeout(function () {
+                    var role = '@TempData["UserRole"]';
+                    if (role === 'Admin') {
+                        window.location.href = '@Url.Action("QLSP", "San_pham")';
+                    } else {
+                        window.location.href = '@Url.Action("Index", "San_pham")';
+                    }
+                }, 1000);
+            </text>
+        }
+    });
+    </script>
+}
