--- a/ProjectCDTT_63132701/Views/tai_khoan/Register.cshtml
+++ b/ProjectCDTT_63132701/Views/tai_khoan/Register.cshtml
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="~/Content/login.css" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
 </head>
 
 <div class="login-wrapper">
@@ -22,37 +24,42 @@
                 @using (Html.BeginForm("Register", "Tai_khoan", FormMethod.Post))
                 {
                     @Html.AntiForgeryToken()
+                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                     <div class="row">
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label for="hoTen">Họ và tên</label>
-                                <input type="text" name="hoTen" class="form-control" id="hoTen" placeholder="Nhập họ tên" required />
+                                @Html.LabelFor(m => m.HoTen, "Họ và tên")
+                                @Html.EditorFor(m => m.HoTen, new { htmlAttributes = new { @class = "form-control", placeholder = "Nhập họ tên" } })
+                                @Html.ValidationMessageFor(m => m.HoTen, "", new { @class = "text-danger" })
                             </div>
 
                             <div class="form-group">
-                                <label for="email">Email</label>
-                                <input type="email" name="email" class="form-control" id="email" placeholder="Nhập email" required />
+                                @Html.LabelFor(m => m.Email, "Email")
+                                @Html.EditorFor(m => m.Email, new { htmlAttributes = new { @class = "form-control", placeholder = "Nhập email" } })
+                                @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
                             </div>
+
                             <div class="form-group">
-                                <label for="matKhau">Mật khẩu</label>
-                                <input type="password" name="matKhau" class="form-control" id="matKhau" placeholder="Nhập mật khẩu" required />
+                                @Html.LabelFor(m => m.MatKhau, "Mật khẩu")
+                                @Html.EditorFor(m => m.MatKhau, new { htmlAttributes = new { @class = "form-control", placeholder = "Nhập mật khẩu", type = "password" } })
+                                @Html.ValidationMessageFor(m => m.MatKhau, "", new { @class = "text-danger" })
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label for="soDienThoai">Số điện thoại</label>
-                                <input type="text" name="soDienThoai" class="form-control" id="soDienThoai" placeholder="Nhập số điện thoại" required />
+                                @Html.LabelFor(m => m.SoDienThoai, "Số điện thoại")
+                                @Html.EditorFor(m => m.SoDienThoai, new { htmlAttributes = new { @class = "form-control", placeholder = "Nhập số điện thoại" } })
+                                @Html.ValidationMessageFor(m => m.SoDienThoai, "", new { @class = "text-danger" })
                             </div>
 
                             <div class="form-group">
-                                <label for="diaChi">Địa chỉ</label>
-                                <textarea name="diaChi" class="form-control" id="diaChi" placeholder="Nhập địa chỉ" style="height: 130px; resize: none;"></textarea>
+                                @Html.LabelFor(m => m.DiaChi, "Địa chỉ")
+                                @Html.TextAreaFor(m => m.DiaChi, new { @class = "form-control", placeholder = "Nhập địa chỉ", style = "height: 130px; resize: none;" })
+                                @Html.ValidationMessageFor(m => m.DiaChi, "", new { @class = "text-danger" })
                             </div>
-
-
                         </div>
                     </div>
-                    <div class="button-container ">
+                    <div class="button-container">
                         <button type="submit" class="btn btn-new">ĐĂNG KÝ</button>
                     </div>
                     if (ViewBag.Message != null)
@@ -65,11 +72,12 @@
 
                 <p> Đã có tài khoản? <a href="/Tai_khoan/Login">Đăng nhập</a></p>
             </div>
-
         </div>
     </div>
 </div>
+
 @section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
     <script>
         $(document).ready(function () {
             var message = '@TempData["Message"]';
@@ -77,10 +85,13 @@
                 toastr.options = {
                     "closeButton": true,
                     "progressBar": true,
-                    "positionClass": "toast-top-right",
-                    "timeOut": "4000"
+                    "positionClass": "toast-bottom-right",
+                    "timeOut": "1000"
                 };
                 toastr.success(message);
+                setTimeout(function () {
+                    window.location.href = '@Url.Action("Login", "Tai_khoan")';
+                }, 1000);
             }
         });
     </script>
